LPS-112604 portal-search-elasticsearch7-api: Make Sidecar HTTP port range a configuration
https://issues.liferay.com/browse/LPS-112604

--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language.properties
@@ -19,6 +19,8 @@ elasticsearch-connection-configuration-name=Elasticsearch Connections
 elasticsearch7-configuration-name=Elasticsearch 7
 embedded-http-port=Embedded HTTP Port
 embedded-http-port-help=This configuration only applies to EMBEDDED mode. Set the HTTP port of the embedded Elasticsearch node that is created when Operation Mode is set to EMBEDDED.
+sidecar-http-port=Sidecar HTTP Port
+sidecar-http-port-help=This configuration only applies to Sidecar. Set the HTTP port range of the Sidecar Elasticsearch node.
 http-cors-allow-origin=HTTP CORS Allow Origin
 http-cors-allow-origin-help=This configuration only applies to EMBEDDED mode. Set the origins to allow when HTTP CORS is enabled.
 http-cors-configurations=HTTP CORS Configurations
